# M-Kopa-Accra-Operations-Intelligence-System

./: .gitignore  API_SUMMARY.md  ARCHITECTURE_CHECKLIST.md  M-Kopa AOIS - API & Backend Architecture.md  MKopa_AOIS_Architecture_Design.md  MKopa_AOIS_Demo_PRD.md  README.md  TECHNICAL_EXPLANATION.md  implementation_plan.md
backend/: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE_STATUS.md  DATA_PROCESSING_GUIDE.md  GOOGLE_FORMS_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_BUSINESS_RULES.md  QUICK_START_INTEGRATION.md  README.md  SCHEMA_UPDATES_SUMMARY.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  create_admin.py  get_sheet_tabs.py  preview_seed.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  seed_excel.py  setup_windows.bat  start_dev.bat  sync_google_sheets.py  test_send_email.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_sync_states_table.py  002_update_agent_shop_schemas.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  agent.py  assignment.py  dsr.py  public_holiday.py  sales_record.py  shop.py  user.py
backend/app/schemas/: agent.py  assignment.py  auth.py  common.py  dsr.py  sales.py  shop.py  user.py
backend/app/services/: assignment_service.py  dsr_service.py  sales_service.py  shop_service.py  team_service.py
backend/app/utils/: __init__.py  data_processing.py  email.py
backend/tests/: conftest.py
(+75 files in other folders)
